Added some heading stuff

--- a/styles/demosite.css
+++ b/styles/demosite.css
@@ -63,6 +63,66 @@ section {
 select.dec, option {
 	font-size: 18pt;
 } 
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+ font-weight:700
+}
+.h1,
+.h2,
+h1,
+h2 {
+ margin-top:38px
+}
+.h3,
+h3 {
+ margin-top:32px
+}
+.h4,
+h4 {
+ margin-top:26px
+}
+.h5,
+h5 {
+ margin-top:23px
+}
+.h6,
+h6 {
+ margin-top:21px
+}
+.h1,
+h1 {
+ font-size:34px
+}
+.h2,
+h2 {
+ font-size:26px
+}
+.h3,
+h3 {
+ font-size:22px
+}
+.h4,
+h4 {
+ font-size:18px
+}
+.h5,
+h5 {
+ font-size:16px
+}
+.h6,
+h6 {
+ font-size:14px
+}
 /*
 
 select option:hover {
